// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        GA
        <span
          class="value"
        >
          G3, P10
        </span>
      </p>
      <label
        class="accordion-body"
      >
        <div>
          <span
            class="text-center header"
          >
            Generations
          </span>
          <div
            class="control"
          >
            <div>
              mock-unit-input min:
              1
              defaultValue:
              3
              <input
                class="unit-input"
              />
            </div>
          </div>
          <span
            class="text-center header"
          >
            Population
          </span>
          <div
            class="control"
          >
            <div>
              mock-unit-input min:
              2
              defaultValue:
              10
              <input
                class="unit-input"
              />
            </div>
          </div>
        </div>
      </label>
    </label>
  </div>
</div>
`;

exports[`should render correctly 2`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        GA
        <span
          class="value"
        >
          G2, P10
        </span>
      </p>
      <label
        class="accordion-body"
      >
        <div>
          <span
            class="text-center header"
          >
            Generations
          </span>
          <div
            class="control"
          >
            <div>
              mock-unit-input min:
              1
              defaultValue:
              2
              <input
                class="unit-input"
              />
            </div>
          </div>
          <span
            class="text-center header"
          >
            Population
          </span>
          <div
            class="control"
          >
            <div>
              mock-unit-input min:
              2
              defaultValue:
              10
              <input
                class="unit-input"
              />
            </div>
          </div>
        </div>
      </label>
    </label>
  </div>
</div>
`;

exports[`should render correctly 3`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        GA
        <span
          class="value"
        >
          G2, P9
        </span>
      </p>
      <label
        class="accordion-body"
      >
        <div>
          <span
            class="text-center header"
          >
            Generations
          </span>
          <div
            class="control"
          >
            <div>
              mock-unit-input min:
              1
              defaultValue:
              2
              <input
                class="unit-input"
              />
            </div>
          </div>
          <span
            class="text-center header"
          >
            Population
          </span>
          <div
            class="control"
          >
            <div>
              mock-unit-input min:
              2
              defaultValue:
              9
              <input
                class="unit-input"
              />
            </div>
          </div>
        </div>
      </label>
    </label>
  </div>
</div>
`;
